<resources>
    <string name="app_name">Visitéo</string>
    <string name="img">idOperaPhoto</string>
    <string name="loading">Chargement en cours</string>
    <string name="loading_rooms">Une mise à jour est en cours.</string>
    <string name="nointernet">Aucune connection internet !</string>
    <string name="camera_error">Rear Facing Camera Unavailable !</string>
    <string name="nodata">Aucune donnée de disponible !</string>
    <string name="error_email">Erreur email !</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="ok">OK</string>
    <string name="cancel">Annuler</string>
    <string name="valider">VALIDER</string>
    <string name="fermer">FERMER</string>
    <string name="dupliquer_etat">DUPLIQUER</string>
    <string name="clear">EFFACER</string>
    <string name="error">Accès refusé</string>
    <string name="singature_error">Impossible de charger la carte SD, veuillez vérifier qu\'elle soit bien connectée</string>
    <string name="sing_valider">Votre signature a bien été validée</string>
    <string name="sing_remove">Voulez-vous vraiment effacer cette signature ?</string>
    <string name="code_hint">Code d\'authentification</string>
    <string name="tit_planning">Planning</string>
    <string name="tit_ordermission">Ordre de Mission</string>
    <string name="tit_etatdes">Etat des lieux n° </string>
    <string name="tit_entree">Entrée</string>
    <string name="tit_srtie">Sortie</string>
    <string name="spl_connection">Connecté à Internet</string>
    <string name="app_description">Le logiciel d\'état des lieux</string>
    <string name="log_licence">Licence</string>
    <string name="alert_dialog_offline">Hors connexion</string>
    <string name="alert_dialog_refus_commentaire">Commentaire refus de signature</string>
    <string name="alert_dialog_licence">Possèdez-vous un code licence ?</string>
    <string name="alert_dialog_code_offline">Aucune connection internet. Possèdez-vous un code d\'authentification ?</string>
    <string name="error_code_offline">Le code est invalide</string>
    <string name="error_no_user_in_database">L\'expert avec lequel vous souhaitez vous connecter ne dispose pas de mission en mode hors-ligne</string>
    <string name="error_empty_licence">Le champ de texte ne doit pas être vide</string>
    <string name="log_identifiant">Identifiant</string>
    <string name="log_passe">Mot de Passe</string>
    <string name="log_valider">Valider</string>
    <string name="edit_licence">Éditer le code licence</string>
    <string name="no_licence">Veuillez entrer un code licence.</string>
    <string name="no_info">Veuillez remplir les champs Identifiants et mot de passe.</string>
    <string name="invalid_info">Mauvais nom d\'utilisateur, mot de passe ou identifiant de licence</string>
    <string name="last_connection">La dernière connexion remonte à plus de 31 jours.</string>
    <string name="account_inactive">Ce compte est inactif.</string>
    <string name="account_close">Ce compte est suspendu.</string>
    <string name="get_data_failed">Impossible de récupérer les données.</string>
    <string name="try_opera_connection">Nous allons tenter de vous connecter en mode Opera Expert avec le login et mot de passe actuel</string>
    <string name="internal_servor_error">Une erreur serveur est survenu.</string>
    <string name="no_mission">Aucune mission n\'a été trouvée pour aujourd\'hui.</string>
    <string name="connection_impossible">Impossible d\'établir une connexion</string>
    <string name="connection_bug">Une erreur serveur est survenue, veuillez vérifier votre identifiant et mot de passe</string>
    <string name="updating_mission">Mission en cours d\'envoie, veuillez patienter</string>
    <string name="update_success">Mission mise à jour avec succès</string>
    <string name="json_error">Une erreur empêche l\'envoie de la mission, veuillez contacter responsable technique</string>
    <string name="connection_impossible_server">Impossible d\'établir une connexion avec le serveur Opera Groupe</string>
    <string name="connection_impossible_licence">Impossible d\'établir une connexion en mode licence. Vous allez être connecté en mode expert Opéra</string>
    <string name="ask_connection_opera">Voulez-vous tenter de vous connecter en mode expert Opéra ?</string>
    <string name="bad_licence">La licence n\'existe pas. Pour se connecter en Opera Expert, veuillez entrer un identifiant et mot de passe</string>
    <string name="create_mission">Voulez-vous créer une mission ?</string>
    <string name="mis_jeudi">Jeudi 17 Sep 2013</string>
    <string name="mis_voir">Voir ordre de mission</string>
    <string name="mis_delete">Supprimer la mission</string>
    <string name="mis_confirm_delete">Êtes-vous certain de vouloir supprimer la mission ?</string>
    <string name="mis_demarrer">Démarrer la mission</string>
    <string name="mis_quitter">Quitter</string>
    <string name="mis_envoyer">Envoyer mission</string>
    <string name="add_mission">Créer une mission</string>
    <string name="mis_heure">Heure</string>
    <string name="mis_rdv">RDV</string>
    <string name="mis_pieces">Pièces</string>
    <string name="mis_adresse">Adresse</string>
    <string name="mis_adresse1">Adresse+</string>
    <string name="mis_cp">CP</string>
    <string name="mis_ville">Ville</string>
    <string name="mis_etage">Étage</string>
    <string name="mis_digicode">Entrant</string>
    <string name="mis_client">Sortant</string>
    <string name="mis_edl">EDL Terminé</string>
    <string name="select_mission">Veuillez sélectionner une mission</string>
    <string name="select_number_mission">Veuillez rentrer un numéro de mission</string>
    <string name="error_number_mission">Le numéro de mission doit être composé de chiffres seulement</string>
    <string name="error_number_piece_surface">Le nombre de pièce et la surface, doivent être composés de chiffres seulement</string>
    <string name="error_date_format">Le format de l\'heure est erroné, il doit être dans le format suivant: </string>
    <string name="error_missing_entrant">Vous devez ajouter un locataire entrant pour une mission de type Entrée</string>
    <string name="error_missing_sortant">Vous devez ajouter un locataire sortant pour une mission de type Sortie</string>
    <string name="error_missing_entrant_sortant">Vous devez ajouter un locataire entrant et sortant pour une mission de type Entrée/Sortie</string>
    <string name="t2">T2</string>
    <string name="edl_entree">État des lieux d\'entrée</string>
    <string name="edl_sortie">État des lieux de sortie</string>
    <string name="edl_sortie_entree">État des lieux d\'entrée et de sortie</string>
    <string name="Mission_33071">Mission 33071</string>
    <string name="rue_Fenelon">4 rue Fenelon</string>
    <string name="test_LYON">69006 LYON</string>
    <string name="voir_mission">Voir mission</string>
    <string name="modifier_mission">Modifier mission</string>
    <string name="select_element">Veuillez définir un élément à rajouter</string>
    <string name="select_pack_element">Veuillez définir un pack d\élément à rajouter</string>
    <string name="select_type_element">Veuillez séléctionner le type de l\'élément pour choisir une observation</string>
    <string name="impossible_add_element">Impossible de rajouter un nouvel élément</string>
    <string name="success_add_element">Un nouvel élément a été ajouté</string>
    <string name="impossible_to_delete">Cet élément n\'est pas supprimable</string>
    <string name="impossible_save_element">Vous devez sélectionner une action pour les élèments en mauvais état avant d\'enregistrer les données</string>
    <string name="impossible_save_action">Vous devez sélectionner une quantité pour définir l\'action</string>
    <string name="impossible_delete">Cet élément n\'est pas supprimable</string>
    <string name="no_find_type_picture">Images introuvable pour certains types</string>
    <string name="locataire_entrant">Locataire entrant:</string>
    <string name="locataire_sortant">Locataire sortant:</string>
    <string name="aucun_locataire">Aucun locataire connu actuellement</string>
    <string name="modifier">Modifier</string>
    <string name="signer">Signer</string>
    <string name="terminer_le_mission">Terminer la mission</string>
    <string name="duplicate_success">La pièce a bien été dupliquée</string>
    <string name="duplicate_piece">Nom de la pièce dupliquée: </string>
    <string name="nouvelles_coordinates">Nouvelles coordonnées du locataire</string>
    <string name="prenom">Prénom</string>
    <string name="nom">Nom</string>
    <string name="addresse">Adresse</string>
    <string name="cp">CP</string>
    <string name="ville">Ville</string>
    <string name="telephone">Téléphone</string>
    <string name="date_entree">Date entrée</string>
    <string name="address_inconnue">Adresse inconnue (ou refus du locataire)</string>
    <string name="represent_par">Représenté par :</string>
    <string name="nom_representant">Nom du représentant</string>
    <string name="email">Email</string>
    <string name="pas_email">pas d\'email</string>
    <string name="dupliquer">Dupliquer</string>
    <string name="om_annuler">Annuler</string>
    <string name="om_valider_les_modi">Valider les modifications</string>
    <string name="om_valider">Valider</string>
    <string name="om_mission">Identifiant :</string>
    <string name="om_date">Date :</string>
    <string name="om_heure">Heure</string>
    <string name="om_entrant">Locataire Entrant :</string>
    <string name="om_sortant">Locataire Sortant</string>
    <string name="om_client">Client :</string>
    <string name="om_immeuble">Immeuble</string>
    <string name="om_lot">Lot</string>
    <string name="om_mandat">Mandat</string>
    <string name="om_mission_tv">327553</string>
    <string name="om_date_tv">10/09/2013</string>
    <string name="om_heure_tv">11h30</string>
    <string name="om_entrant_tv">Malheiro Philippe</string>
    <string name="om_sortant_tv">Ex Sompas</string>
    <string name="om_client_tv">PURE GESTION</string>
    <string name="om_immeuble_tv">0578</string>
    <string name="om_lot_tv">0030</string>
    <string name="om_chk1">État des lieux Entrée</string>
    <string name="om_chk2">État des lieux Sortie </string>
    <string name="om_chk4">Entrée / Sortie</string>
    <string name="om_chk3">Constat après travaux</string>
    <string name="om_address">Adresse</string>
    <string name="om_suite">Suite</string>
    <string name="om_cp">CP</string>
    <string name="om_ville">Ville</string>
    <string name="om_etage">Étage*</string>
    <string name="om_type">Type du bien</string>
    <string name="om_type_mission">Type de mission</string>
    <string name="om_pieces">Pièces</string>
    <string name="om_interieur">Intérieur</string>
    <string name="om_surface">Surface</string>
    <string name="om_fournisseur">Fournisseur</string>
    <string name="om_cave">Cave</string>
    <string name="om_grenier">Grenier</string>
    <string name="om_address_tv">22 rue Jean Jaurès</string>
    <string name="pop_up">Annuler</string>
    <string name="etat_choose_tit">Veuillez choisir une des actions suivantes:</string>
    <string name="etat_reparer">Réparer / Réviser /Entretenir</string>
    <string name="etat_changer">Changer / Remplacer</string>
    <string name="etat_repeindre">Repeindre</string>
    <string name="etat_refixer">Refixer</string>
    <string name="etat_debarrasser">Débarrasser / Vider / Supprimer</string>
    <string name="etat_ancune">Aucune Action</string>
    <string name="etat_quantite_tit">Quantité</string>
    <string name="etat_note">Note</string>
    <string name="etat_unite_tit">Unité</string>
    <string name="etat_del">Supprimer la ligne sélectionnée</string>
    <string name="etat_add">Ajouter un nouvel élément</string>
    <string name="etat_add_pack">Ajouter un pack d\'éléments</string>
</resources>