<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/prenomLocataire_EditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/prenom"
            android:inputType="textCapWords"
            android:padding="5dp"
            android:singleLine="true"
            android:textColorHint="@android:color/black">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/nomLocataire_EditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/nom"
            android:inputType="textCapWords"
            android:padding="5dp"
            android:singleLine="true"
            android:textColorHint="@android:color/black" />

        <EditText
            android:id="@+id/addresseLocataire_EditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/addresse"
            android:inputType="textCapWords"
            android:padding="5dp"
            android:singleLine="true"
            android:textColorHint="@android:color/black" />

        <EditText
            android:id="@+id/cpLocataire_EditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/cp"
            android:inputType="number"
            android:padding="5dp"
            android:singleLine="true"
            android:textColorHint="@android:color/black" />

        <EditText
            android:id="@+id/villeLocataire_EditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/ville"
            android:inputType="textCapWords"
            android:padding="5dp"
            android:singleLine="true"
            android:textColorHint="@android:color/black" />

        <EditText
            android:id="@+id/telephoneLocataire_EditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/telephone"
            android:inputType="textCapWords"
            android:padding="5dp"
            android:singleLine="true"
            android:textColorHint="@android:color/black" />

        <EditText
            android:id="@+id/dateEntree_EditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/date_entree"
            android:inputType="date"
            android:padding="5dp"
            android:singleLine="true"
            android:textColorHint="@android:color/black" />

        <CheckBox
            android:id="@+id/inconnue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/address_inconnue"
            android:textColor="@android:color/black" />

        <CheckBox
            android:id="@+id/representeCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:checked="false"
            android:text="@string/represent_par"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/representant_EditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/nom_representant"
            android:inputType="textCapWords"
            android:padding="5dp"
            android:singleLine="true"
            android:textColorHint="@android:color/black" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <EditText
                android:id="@+id/emailLocataire_EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="2"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:singleLine="false"
                android:textColorHint="@android:color/black" />

            <CheckBox
                android:id="@+id/checkBoxEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:checked="false"
                android:text="@string/pas_email"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/popup1_divider"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/cancelbt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/pop_up"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/okbt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/ok"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>