<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="20dp"
        android:singleLine="true"
        android:text="@string/etat_choose_tit"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/dialogButtonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="@drawable/transparent_btn"
        android:clickable="true"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/etat_del"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/dialogButtonAddPack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/transparent_btn"
        android:clickable="true"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/etat_add_pack"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/dialogButtonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/transparent_btn"
        android:clickable="true"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/etat_add"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="15dp"/>

</LinearLayout>