<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_choose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="20dp"
                android:singleLine="true"
                android:text="@string/etat_choose_tit"
                android:textColor="@color/black" />

            <RadioGroup
                android:id="@+id/etat_choose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/reparer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/etat_reparer" />

                <RadioButton
                    android:id="@+id/changer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/etat_changer" />

                <RadioButton
                    android:id="@+id/repeindre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/etat_repeindre" />

                <RadioButton
                    android:id="@+id/refixer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/etat_refixer" />

                <RadioButton
                    android:id="@+id/debarrasser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/etat_debarrasser" />

                <RadioButton
                    android:id="@+id/ancune"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/etat_ancune" />
            </RadioGroup>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="15dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/txt_quantite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="20dp"
                    android:singleLine="true"
                    android:text="@string/etat_quantite_tit"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/quantite"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/txt_quantite"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true"
                    android:inputType="numberDecimal"
                    android:paddingTop="20dp"
                    android:singleLine="true"
                    android:textColor="@color/black" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="15dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/txt_unite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="20dp"
                    android:singleLine="true"
                    android:text="@string/etat_unite_tit"
                    android:textColor="@color/black" />

                <Spinner
                    android:id="@+id/unite"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/txt_unite"
                    android:paddingTop="20dp"
                    android:spinnerMode="dropdown"
                    android:textColor="@color/black" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="15dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/txt_note"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="20dp"
                    android:singleLine="true"
                    android:text="@string/etat_note"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/note"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/txt_note"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true"
                    android:inputType="textCapWords"
                    android:paddingTop="20dp"
                    android:textColor="@color/black" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="15dp"
                android:gravity="center" >

                <Button
                    android:id="@+id/dialogButtonOK"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"
                    android:clickable="true"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/ok" />

                <Button
                    android:id="@+id/dialogButtonCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/dialogButtonOK"
                    android:clickable="true"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/cancel" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>